# spectral_flow

./: LICENSE  README.md  RELEASE_NOTES.md  __init__.py  algebra.py  arnoldi.py  basis.py  benchmarks.py  carleman.py  cluster.py  codec.py  compress.py  constructor.py  core.py  demo.py  embed.py  families.py  graph_gen.py  graphop.py  hessian.py  homotopy.py  invariants.py  inversion.py  operator_algebra.py  order.py  physics.py  pyproject.toml  streaming.py  tasks.py  topology.py  transport.py  universal_demo.py  verify.py
adapters/: __init__.py  audio.py  base.py  financial.py  graph_adapter.py  image.py  mesh.py  molecular.py  pointcloud.py  tabular.py  text.py  timeseries.py  video.py  voxel.py
examples/: README.md  cosmic_dynamics.md  demo.py  demo_adapters_load.py  demo_benchmark.py  demo_breakthrough_graph_inverse.py  demo_breakthrough_pde.py  demo_breakthrough_pde2d_control.py  demo_codec.py  demo_cosmic.py  demo_electrodynamics.py  demo_graphop.py  demo_inverse_graph_design.py  demo_logical.py  demo_pde.py  demo_pde_multigrid.py  demo_quantum_ep.py  demo_sorting.py  demo_topology.py  demo_verification_report.py  electrodynamics.md  graph_operator.md  graph_sorting.md  logical_embeddings.md  pde_spectroscopy.md  spectral_codec.md  spectral_topology.md  universal_demo.py
examples/reports/: benchmark_adapters.md  benchmark_scale.md  breakthrough_graph_inverse.md  breakthrough_pde2d_control.md  breakthrough_pde_queries.md  computational_breakthrough_summary.md  cosmic_dynamics.md  electrodynamics.md  graph_operator.md  graph_sorting.md  inverse_graph_design.md  logical_embeddings.md  pde_multigrid.md  pde_spectroscopy.md  quantum_exceptional_point.md  spectral_codec.md  spectral_topology.md
tests/: test_adapters.py  test_adapters_edge_cases.py  test_algebra.py  test_audit_fixes.py  test_blueprint_v2.py  test_breakthrough_harness.py  test_breakthrough_reports.py  test_constructor.py  test_core.py  test_core_validation.py  test_ep_topology.py  test_families.py  test_final_gaps.py  test_fluent_api.py  test_hessian.py  test_industrial_baselines.py  test_inversion_stability.py  test_isospectral_transport.py  test_jordan_fuse.py  test_negative_controls.py  test_new_adapters.py  test_nonhermitian_core.py  test_operator_algebra_core_api.py  test_operator_algebra_verification.py  test_operator_cost_model.py  test_physics_operators.py  test_public_contract.py  test_readme_snippets.py  test_remaining_gaps.py  test_scientific_verification.py  test_second_order_control.py  test_sparse_graphs.py  test_spectral_degeneracy.py  test_topology.py
