[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-flow"
version = "0.1.1"
description = "Spectral Flow Transform — one formula, one kernel, all operators"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dmitry Sierikov", email = "dmitry.serikoff@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
sft-demo = "sft.examples.demo:main"

[tool.setuptools]
packages = ["sft", "sft.adapters", "sft.tests", "sft.examples"]
[tool.setuptools.package-dir]
"sft" = "."

[project.urls]
Homepage = "https://github.com/dimaq12/spectral_flow"
Repository = "https://github.com/dimaq12/spectral_flow.git"

[tool.setuptools.package-data]
"sft" = ["*.py", "py.typed"]
"sft.adapters" = ["*.py"]
"sft.tests" = ["*.py"]
"sft.examples" = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["sft/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
